# GAME-SDL-SPORTS-TuxFootball

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  tuxfootball.desktop
data/: Makefile.am  Makefile.in
data/graphics/: Makefile.in  goalpostbottom.tga  goalposttop.tga
data/graphics/team1/: Makefile.in
data/graphics/team1_goalie/: Makefile.in
data/graphics/team2/: Makefile.in
data/graphics/team2_goalie/: Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  de.gmo  de.po  tuxfootball.pot
src/: Font.hpp  Makefile.am  Makefile.in  SFont-README  SFont.c  SFont.h  ball.cpp  ball.h  body.cpp  body.h  camera.cpp  camera.h  const.h  controller.cpp  controller.h  gameengine.cpp  gameengine.h  graphics.cpp  graphics.h  main.cpp  matrix.cpp  matrix.h  pitch.cpp  pitch.h  player.cpp  player.h  point3d.cpp  point3d.h  rect.cpp  rect.h  segment.cpp  segment.h  spriteobject.cpp  spriteobject.h  spritesequence.cpp  spritesequence.h  team.cpp  team.h  tilemap.cpp  tilemap.h
src/gamestates/: extratimefirsthalfstate.cpp  extratimefirsthalfstate.h  extratimehalftimestate.cpp  extratimehalftimestate.h  extratimesecondhalfstate.cpp  extratimesecondhalfstate.h  extratimestate.cpp  extratimestate.h  firsthalfstate.cpp  firsthalfstate.h  fulltimestate.cpp  fulltimestate.h  halftimestate.cpp  halftimestate.h  ingamestatebase.cpp  ingamestatebase.h  mainmenustate.cpp  mainmenustate.h  matchabortedstate.cpp  matchabortedstate.h  matchfinishedstate.cpp  matchfinishedstate.h  matchstartstate.cpp  matchstartstate.h  menustatebase.cpp  menustatebase.h  nationalanthemstate.cpp  nationalanthemstate.h  penaltyshootoutstate.cpp  penaltyshootoutstate.h  redefinekeysstate.cpp  redefinekeysstate.h  secondhalfstate.cpp  secondhalfstate.h  statebase.cpp  statebase.h  videomenustate.cpp  videomenustate.h
src/logger/: logger.cpp  logger.h
src/menu/: mainmenu.cpp  mainmenu.h  menu.cpp  menu.h  redefinekeysmenu.cpp  redefinekeysmenu.h  videosettingsmenu.cpp  videosettingsmenu.h
src/menu/elements/: menubutton.cpp  menubutton.h  menuitem.cpp  menuitem.h  menukeyselect.cpp  menukeyselect.h  menulabel.cpp  menulabel.h  menuoptionlist.cpp  menuoptionlist.h
src/resources/: fontmanager.cpp  fontmanager.h  resourcemanager.cpp  resourcemanager.h  soundmanager.cpp  soundmanager.h  surfacemanager.cpp  surfacemanager.h
